<resources>
    <string name="app_name">Keep Count</string>
    <string name="title_home">Home</string>
    <string name="title_budget">Budget</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_profile">Profile</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See All</string>
    <string name="balance_example">-$80</string>
    <string name="transaction_time_example">03:30 PM</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_description">Description</string>
    <string name="timeline_today">Today</string>
    <string name="timeline_week">Week</string>
    <string name="timeline_month">Month</string>
    <string name="timeline_year">Year</string>
    <string name="balance_amount">$9400</string>
    <string name="account_balance">Account Balance</string>
    <string name="income">Income</string>
    <string name="value_5000">$5000</string>
    <string name="expenses">Expenses</string>
    <string name="value_1200">$1200</string>
    <string name="positive_transaction_amount">$%s</string>
    <string name="negative_transaction_amount">-$%s</string>
    <string name="expense">Expense</string>
    <string name="expense_how_much">How much?</string>
    <string name="exchange_default_currency">$</string>
    <string name="expense_default_amount">0</string>
    <string name="expenses_category_spinner">Category</string>
    <string name="expenses_wallet_spinner">Main Wallet</string>
    <string name="tv_repeat_description">Repeat transaction</string>
    <string name="tv_repeat">Repeat</string>
    <string name="expenses_add_attachment">Add Attachment</string>
    <string name="btn_continue">Continue</string>
    <string-array name="monthly_items_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="category_dropdown">
        <item>Subscription</item>
        <item>Salary</item>
        <item>Food</item>
        <item>Other</item>
    </string-array>

    <!-- //todo deal with multiple wallets -->
    <string-array name="walletDropdown">
        <item>Main Wallet</item>
    </string-array>
</resources>