<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.filipemorgado.myexpenses.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.filipemorgado.myexpenses.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.filipemorgado.myexpenses.ui.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.filipemorgado.myexpenses.ui.notifications.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>