<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/transaction_list_height"
    android:padding="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ic_transaction"
        android:layout_width="@dimen/transaction_list_icon_width"
        android:layout_height="@dimen/transaction_list_icon_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shopping_bag"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/transaction_list_content_height"
        android:layout_weight="1"
        android:padding="@dimen/transaction_list_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTransactionCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/transaction_category"
            android:textColor="@color/softerBlack"
            android:textSize="@dimen/transaction_list_main_text"
            android:layout_weight="2"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/tvTransactionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/transaction_description"
            android:textColor="@color/lightGrey"
            android:textSize="@dimen/transaction_list_secondary_text"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAmountTransaction"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/transaction_list_content_height"
        android:gravity="end"
        android:padding="@dimen/transaction_list_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/recycler_view_margin_end"
            android:fontFamily="@font/inter_bold"
            android:text="@string/balance_example"
            android:textColor="@color/negativeBalance"
            android:textSize="@dimen/transaction_list_main_text"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tvTransactionTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/recycler_view_margin_end"
            android:fontFamily="@font/inter_bold"
            android:text="@string/transaction_time_example"
            android:textColor="@color/lightGrey"
            android:textSize="@dimen/transaction_list_secondary_text"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>