<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/expense_bottom_screen_radius">

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/expenses_spinner_container_background"
        android:hint="@string/expenses_category_spinner"
        android:paddingStart="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingEnd="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingTop="@dimen/expenses_spinner_padding_left_right"
        android:paddingBottom="@dimen/expenses_spinner_padding_left_right"
        android:gravity="center|start"
        android:layout_marginTop="@dimen/expenses_initial_margin_top"
        android:layout_marginStart="@dimen/expenses_spinner_margins"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        android:textColor="@color/baseDark"
        android:textColorHint="@color/lightGrey"
        android:textSize="@dimen/text_size_m"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_drawable="@drawable/ic_arrow_down"
        app:spinner_arrow_tint="@color/lightGrey"
        app:spinner_divider_color="@color/lightGrey"
        app:spinner_item_array="@array/category_dropdown"
        app:spinner_item_height="@dimen/expenses_spinner_item_height"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/white"
        app:spinner_popup_max_height="@dimen/expenses_4_items_dropdown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/expenses_spinner_container_background"
        android:textColor="@color/baseDark"
        android:hint="@string/transaction_description"
        android:textColorHint="@color/lightGrey"
        android:textSize="@dimen/text_size_m"
        android:gravity="center|start"
        android:paddingStart="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingEnd="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingTop="@dimen/expenses_spinner_padding_left_right"
        android:paddingBottom="@dimen/expenses_spinner_padding_left_right"
        android:layout_marginTop="@dimen/expenses_initial_margin_top"
        android:layout_marginStart="@dimen/expenses_spinner_margins"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/spinnerWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/expenses_spinner_container_background"
        android:hint="@string/expenses_wallet_spinner"
        android:paddingStart="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingEnd="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingTop="@dimen/expenses_spinner_padding_left_right"
        android:paddingBottom="@dimen/expenses_spinner_padding_left_right"
        android:gravity="center|start"
        android:layout_marginTop="@dimen/expenses_initial_margin_top"
        android:layout_marginStart="@dimen/expenses_spinner_margins"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        android:textColor="@color/baseDark"
        android:textColorHint="@color/lightGrey"
        android:textSize="@dimen/text_size_m"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_drawable="@drawable/ic_arrow_down"
        app:spinner_arrow_tint="@color/lightGrey"
        app:spinner_divider_color="@color/lightGrey"
        app:spinner_item_array="@array/walletDropdown"
        app:spinner_item_height="@dimen/expenses_spinner_item_height"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/white"
        app:spinner_popup_max_height="@dimen/expenses_4_items_dropdown"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llAttachments"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:clickable="false"
        android:background="@drawable/expenses_dashed_container_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingEnd="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingTop="@dimen/expenses_spinner_padding_left_right"
        android:paddingBottom="@dimen/expenses_spinner_padding_left_right"
        android:layout_marginTop="@dimen/expenses_initial_margin_top"
        android:layout_marginStart="@dimen/expenses_spinner_margins"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        app:layout_constraintTop_toBottomOf="@id/spinnerWallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attachment"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_m"
            android:textColor="@color/baseDark"
            android:textColorHint="@color/lightGrey"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:hint="@string/expenses_add_attachment" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRepeatTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/baseDark"
        android:text="@string/tv_repeat"
        android:textSize="@dimen/text_size_m"
        android:gravity="center|start"
        android:paddingStart="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingEnd="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingBottom="@dimen/expenses_spinner_padding_left_right"
        android:layout_marginTop="@dimen/expenses_initial_margin_top"
        android:layout_marginStart="@dimen/expenses_spinner_margins"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        app:layout_constraintTop_toBottomOf="@id/llAttachments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRepeatDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGrey"
        android:text="@string/tv_repeat_description"
        android:textSize="@dimen/text_size_s"
        android:gravity="center|start"
        android:paddingStart="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingEnd="@dimen/expenses_spinner_padding_top_bottom"
        android:paddingBottom="@dimen/expenses_spinner_padding_left_right"
        android:layout_marginStart="@dimen/expenses_spinner_margins"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        app:layout_constraintTop_toBottomOf="@id/tvRepeatTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:track="@drawable/switch_thumb_selector"
        app:thumbTint="@color/white"
        android:layout_marginTop="@dimen/expenses_initial_margin_top"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        app:layout_constraintTop_toBottomOf="@id/tvRepeatTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvRepeatTitle" />

    <!-- //todo Missing black bar at the bottom to swipe up -->
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/btn_background_style"
        android:textColor="@color/white"
        android:text="@string/btn_continue"
        android:textSize="@dimen/text_size_l"
        android:gravity="center"
        android:layout_marginTop="@dimen/expenses_initial_margin_top"
        android:layout_marginStart="@dimen/expenses_spinner_margins"
        android:layout_marginEnd="@dimen/expenses_spinner_margins"
        android:layout_marginBottom="@dimen/expenses_spinner_margins"
        app:layout_constraintTop_toBottomOf="@id/tvRepeatDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>