<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- //todo here it will be the toolbar-->
    <LinearLayout
        android:id="@+id/toolbarHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAccBalance"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:id="@+id/tvAccBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/inter_medium"
        android:text="@string/account_balance"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/balance_header_text_size"
        android:layout_marginBottom="@dimen/balance_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvBalanceAmount" />

    <TextView
        android:id="@+id/tvBalanceAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/balance_amount"
        android:textColor="@color/mediumBlack"
        android:textSize="@dimen/amount_text_size"
        android:layout_marginBottom="@dimen/amount_margij"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/accBalance" />

    <LinearLayout
        android:id="@+id/accBalance"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llDaySelector"
        android:layout_marginBottom="@dimen/income_expense_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/income_expense_height"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/income_radius_background">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/income_expense_height"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/expense_radius_background"
            >

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDaySelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recentTransactionsBar"
        android:layout_marginBottom="@dimen/day_selector_margin">
        <include
            android:id="@+id/daySelector"
            layout="@layout/transactions_time_selector" />
    </LinearLayout>

    <!-- //todo See All needs to be more similar -->
    <RelativeLayout
        android:id="@+id/recentTransactionsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/recent_transaction_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvTransactions">

        <TextView
            android:id="@+id/tvRecentTransactionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/recent_transactions"
            android:textColor="@color/softerBlack"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/see_all"
            android:textColor="@color/defaultPurple"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/radius_background_color"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@+id/recentTransactionsBar"
        app:layout_constraintBottom_toTopOf="@id/rvTransactions" />

    <!-- //todo change the width and height-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactions"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@+id/recentTransactionsBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
